# simplegen

./: Cargo.toml  LICENCE.md  README.md
.github/workflows/: rust.yml
src/: code_buffer.rs  lib.rs  printer.rs
