[package]
name = "simplegen"
authors = ["Gary Moore"]
description = """simplegen is a simple text buffer that maintains indentation
for calls to `println()`. The contents of the buffer can be retrieved by
calling the `to_string()` method."""
repository = "https://github.com/MadManGaz/simplegen/"
readme = "README.md"
keywords = ["codegen"]
categories = ["template-engine"]
license = "GPL-2.0-only"
version = "0.1.2"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
